--- a/templates/page-sysconfig-main.html
+++ b/templates/page-sysconfig-main.html
@@ -63,6 +63,7 @@
 					<tr>
 						<td>{{module}}</td>
 						<td>
+							<button class="btn btn-default btn-xs" name="list" value="{{moduleid}}"><span class="glyphicon glyphicon-eye-open"></span> Ansehen</button>
 							<!-- a class="btn btn-default btn-xs"><span class="glyphicon glyphicon-edit"></span> Bearbeiten</a -->
 						</td>
 						<td>
