news tab for setting/viewing news

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -26,6 +26,7 @@
 						<li><a href="?do=VmStore">VM Speicherort</a></li>
 					</ul>
 				</li>
+				<li><a href="?do=News">News</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{{{loginPanel}}}
