--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -27,6 +27,7 @@
 					</ul>
 				</li>
 				<li><a href="?do=News">News</a></li>
+				<li><a href="?do=SystemStatus">Status</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				{{{loginPanel}}}
