better action handling for news

--- a/templates/page-news.html
+++ b/templates/page-news.html
@@ -50,7 +50,7 @@
 			<td class="text-left" nowrap="nowrap">{{date}}</td>
 			<td>{{title}}</td>
 			<td>{{content}}</td>
-			<td><a class="btn btn-primary btn-sm glyphicon glyphicon-share-alt" href="?do=news&amp;newsid={{newsid}}&amp;action=apply"> Übernehmen</a></td>
+			<td><a class="btn btn-primary btn-sm glyphicon glyphicon-share-alt" href="?do=news&amp;newsid={{newsid}}&amp;action=show"> Übernehmen</a></td>
 			<td><a class="btn btn-danger btn-sm glyphicon glyphicon-remove" href="?do=news&amp;newsid={{newsid}}&amp;action=delete"> Löschen</a></td>
 		</tr>
 	{{/list}}
