make the table responsive. Fixes appearance on mobile devices

--- a/templates/page-news.html
+++ b/templates/page-news.html
@@ -36,6 +36,7 @@
 	<label>Alte News</label>
 </div>
 <div class="panel-body">
+<div class="table-responsive">
 <table class="table table-stripped table-condensed">
 	<thead>
 		<th class="col-sm-2">Datum</th>
@@ -56,5 +57,6 @@
 	{{/list}}
 	</tbody>
 </table>
+</div>
 </div>
 </div>
