--- a/templates/systemstatus/diskstat.html
+++ b/templates/systemstatus/diskstat.html
@@ -18,6 +18,8 @@
 	<b>Fehler beim Ermitteln des verfügbaren Speicherplatzes am VM-Speicherort. Bitte überprüfen Sie die Konfiguration.</b>
 	{{/store}}
 </div>
+<div class="clearfix"></div>
+<div>{{storeError}}</div>
 <script type="text/javascript">
 	{{#store}}
 	Circles.create({
