Improved some help text :)

--- a/templates/systemstatus/systeminfo.html
+++ b/templates/systemstatus/systeminfo.html
@@ -39,7 +39,7 @@
 
 {{#swapWarning}}
 <div>
-	<b>Achtung!</b> Es wird swap-Speicher genutzt. Dies kann ein Hinweis darauf sein, dass der Satelliten-Server zu wenig physikalischen Speicher zur Verfügung hat. Im Falle von
+	<b>Achtung!</b> Es wird swap-Speicher genutzt. Dies kann ein Hinweis darauf sein, dass dem Satelliten-Server zu wenig physikalischer Speicher zur Verfügung steht. Im Falle von
 	Performance-Problemen oder Instabilität des Server sollten Sie erwägen, den Server mit mehr RAM auszustatten.
 </div>
 {{/swapWarning}}
