--- a/style/default.css
+++ b/style/default.css
@@ -115,3 +115,15 @@ body {
 .slx-bold {
 	font-weight: bold;
 }
+
+.slx-rotation {
+  animation-name: rotateThis;
+  animation-duration: .75s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+ 
+@keyframes rotateThis {
+  from { transform: scale( 1 ) rotate( 0deg );   }
+  to   { transform: scale( 1 ) rotate( 360deg ); }
+}
