--- a/templates/systemstatus/_page.html
+++ b/templates/systemstatus/_page.html
@@ -12,7 +12,7 @@
 					Speicherplatz
 				</div>
 				<div class="panel-body" id="diskstat">
-					*dreh dreh dreh dreh*
+					<span class="glyphicon glyphicon-refresh slx-rotation"></span>
 				</div>
 			</div>
 		</div>
@@ -23,7 +23,7 @@
 					Dienste
 				</div>
 				<div class="panel-body" id="services">
-					*dreh dreh dreh dreh*
+					<span class="glyphicon glyphicon-refresh slx-rotation"></span>
 				</div>
 			</div>
 		</div>
@@ -39,7 +39,7 @@
 					Adresskonfiguration
 				</div>
 				<div class="panel-body" id="addresses">
-					*dreh dreh dreh dreh*
+					<span class="glyphicon glyphicon-refresh slx-rotation"></span>
 				</div>
 			</div>
 		</div>
@@ -47,10 +47,10 @@
 		<div class="col-md-6">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					Systemlast
+					System
 				</div>
 				<div class="panel-body" id="systeminfo">
-					*dreh dreh dreh dreh*
+					<span class="glyphicon glyphicon-refresh slx-rotation"></span>
 				</div>
 			</div>
 		</div>
