1) Improve Taskmanager error handling 2) add uptime display to status page, finally closes #953

--- a/templates/systemstatus/systeminfo.html
+++ b/templates/systemstatus/systeminfo.html
@@ -1,3 +1,7 @@
+<div>
+	OS Uptime: {{uptime}}
+</div>
+
 <div class="slx-storechart">
 	<b>CPU-Last</b>
 	{{#cpuLoadOk}}
@@ -40,7 +44,7 @@
 {{#swapWarning}}
 <div>
 	<b>Achtung!</b> Es wird swap-Speicher genutzt. Dies kann ein Hinweis darauf sein, dass dem Satelliten-Server zu wenig physikalischer Speicher zur Verfügung steht. Im Falle von
-	Performance-Problemen oder Instabilität des Server sollten Sie erwägen, den Server mit mehr RAM auszustatten.
+	Performance-Problemen oder Instabilität des Servers sollten Sie erwägen, den Server mit mehr RAM auszustatten.
 </div>
 {{/swapWarning}}
 
