Some minor html fixes/improvements

--- a/templates/serversetup/ipaddress.html
+++ b/templates/serversetup/ipaddress.html
@@ -11,7 +11,7 @@
 			<form method="post" action="?do=ServerSetup">
 				<input type="hidden" name="action" value="ip">
 				<input type="hidden" name="token" value="{{token}}">
-				<table>
+				<table class="slx-table">
 					{{#ips}}
 					<tr>
 						<td>{{ip}}</td>
