[templates] adapt html templates

--- a/templates/main-menu-logout.html
+++ b/templates/main-menu-logout.html
@@ -29,7 +29,7 @@
 				<li><a href="?do=SystemStatus">Status</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				{{{loginPanel}}}
+				<li><a href="?do=Session&amp;action=logout&amp;token={{{token}}}"><b>{{user}}</b> ({{logout}})</a></li>
 			</ul>
 		</div>
 	</div>
