--- a/templates/main-menu-login.html
+++ b/templates/main-menu-login.html
@@ -29,7 +29,7 @@
 				<li><a href="?do=SystemStatus">Status</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				{{{loginPanel}}}
+				<li><a href="?do=Session&amp;action=login">{{login}}</a></li>
 			</ul>
 		</div>
 	</div>
