--- a/templates/page-adduser.html
+++ b/templates/page-adduser.html
@@ -1,28 +1,28 @@
 <div class="container">
 	<form class="form-adduser" action="?do=AddUser" method="post">
-		<h2 class="form-signin-heading">Benutzer anlegen</h2>
+		<h2 class="form-signin-heading">{{createUser}}</h2>
 		<div class="row">
-			<div class="col-md-4">Benutzerkennung</div>
-			<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="Benutzerkennung" autofocus></div>
+			<div class="col-md-4">{{username}}</div>
+			<div class="col-md-4"><input type="text" name="user" value="{{user}}" class="form-control" placeholder="{{username}}" autofocus></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">Passwort</div>
-			<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="Passwort"></div>
-			<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="Wiederholen"></div>
+			<div class="col-md-4">{{password}}</div>
+			<div class="col-md-4"><input type="password" name="pass1" class="form-control" placeholder="{{password}}"></div>
+			<div class="col-md-4"><input type="password" name="pass2" class="form-control" placeholder="{{confirmation}}"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">Vollständiger Name</div>
-			<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="Max Mustermann"></div>
+			<div class="col-md-4">{{fullName}}</div>
+			<div class="col-md-4"><input type="text" name="fullname" value="{{fullname}}" class="form-control" placeholder="{{fullName}}"></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4">Telefon</div>
-			<div class="col-md-4"><input type="text" name="phone" value="{{phone}}" class="form-control" placeholder="Durchwahl"></div>
+			<div class="col-md-4">{{telephone}}</div>
+			<div class="col-md-4"><input type="text" name="phone" value="{{phone}}" class="form-control" placeholder="{{telephone}}"></div>
 		</div>
 		<div class="row">
 			<div class="col-md-4">E-Mail</div>
-			<div class="col-md-4"><input type="text" name="email" value="{{email}}" class="form-control" placeholder="spam@aol.com"></div>
+			<div class="col-md-4"><input type="text" name="email" value="{{email}}" class="form-control" placeholder="Email"></div>
 		</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Benutzer anlegen</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">{{createUser}}</button>
 		<input type="hidden" name="action" value="adduser">
 	</form>
 </div>
